--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         }
 
         /* CSS Grid Layout for the main container */
+        /* CSS Grid Layout for the main container */
         .container {
             display: grid;
-            grid-template-columns: 250px 1fr; /* TOC 250px wide, main content takes the rest */
+            grid-template-columns: 300px 1fr; /* Increase the TOC to 300px (from 250px) */
             height: 100vh; /* Full height of the viewport */
             background-color: #fff;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -31,13 +32,17 @@
             overflow: hidden;
         }
 
+
         /* Style for the TOC (left side) */
-        .toc {
-            background-color: #004d99;
-            padding: 20px;
-            color: white;
-            overflow-y: auto; /* Scrollable if TOC is too long */
-        }
+       /* Style for the TOC (left side) */
+.toc {
+    background-color: #add8e6; /* Light blue background */
+    padding: 20px;
+    color: white;
+    overflow-y: auto; /* Scrollable if TOC is too long */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15); /* Optional: shadow to make it pop */
+    border-right: 1px solid #ddd; /* Optional: border to separate TOC and content */
+}
 
         .toc h2 {
             font-size: 2.0rem;
