--- a/index.html
+++ b/index.html
@@ -117,17 +117,21 @@
         }
 
         /* Cover section */
-        .cover {
-            background-image: url('cover2.png');
-            background-size: cover;
-            background-position: center;
-            padding: 80px 20px;
-            text-align: center;
-            color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-        }
+         /* Cover section */
+.cover {
+    background-image: url('cover2.png');
+    background-size: auto; /* Keep the image's original size */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-position: center; /* Center the image */
+    padding: 80px 20px;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    height: auto; /* Automatically adjust height */
+}
+
 
         .cover h2 {
             font-size: 2rem;
