--- a/index.html
+++ b/index.html
@@ -117,20 +117,22 @@
         }
 
         /* Cover section */
-         /* Cover section */
 .cover {
     background-image: url('cover2.png');
-    background-size: auto; /* Keep the image's original size */
-    background-repeat: no-repeat; /* Prevent the image from repeating */
-    background-position: center; /* Center the image */
-    padding: 80px 20px;
+    background-size: contain; /* cover2.png must not cropped - changed on 9.15.2024 */
+    background-repeat: no-repeat; /* Prevents tiling */
+    background-position: center; /* Center the image within the container */
+    height: 400px; /* Set a fixed height for the container */
     text-align: center;
     color: white;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
-    height: auto; /* Automatically adjust height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 
         .cover h2 {
