--- a/index.html
+++ b/index.html
@@ -226,10 +226,8 @@
 
         <!-- Main Content Section -->
         <div class="main-content">
-            <h1 id="bootcamp1"><i class="fa fa-info-circle"></i> Winter 2025 Boot Camp (1)</h1>
-            <p><strong>Empowering Women in Technology</strong><br>
-            <strong>Department of Information Technology<br>School of Science and Technology<br>Georgia Gwinnett College</strong></p>
-
+            <h1 id="bootcamp1"><i class="fa fa-info-circle"></i> Winter 2025 Boot Camp</h1>
+             
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
                     <i class="fa fa-pencil"></i> Apply Here
