--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                     <p><strong>IN TECHNOLOGY</strong></p>
                 </div>
             </div>
-
-            <p><strong>Women in Technology Java Programming Boot Camp will be held in-person from:</strong></p>
-            <p><strong>THURSDAY, 2 JANUARY, 2025 - SATURDAY, 4 JANUARY, 2025.</strong></p>
+            <br/>
+            <p>Women in Technology Java Programming Boot Camp will be held in-person from:</p>
+            <p><strong>Thursday, 2 January, 2025 - Saturday, 4 January, 2025.</strong></p>
 
             <p><strong>The purpose of this boot camp is to:</strong></p>
             <ul>
