--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <!-- Main Content Section -->
         <div class="main-content">
             <h1 id="bootcamp1"><i class="fa fa-info-circle"></i> Winter 2025 Boot Camp</h1>
-            <p><strong>Thursday, January 2, 2025 - Saturday, January 4, 2025</strong></p>
+            <p><strong>Friday, January 3, 2025 - Saturday, January 4, 2025</strong></p>
 
              
             <div class="center">
@@ -244,9 +244,9 @@
                     <p><strong>IN TECHNOLOGY</strong></p>
                 </div>
             </div>
-            <br/>
-            <p>Women in Technology Java Programming Boot Camp will be held in-person from:</p>
-            <p><strong>Thursday, 2 January, 2025 - Saturday, 4 January, 2025.</strong></p>
+            <br>
+            <p>Women in Technology Java Programming Boot Camp will be held in-person from:<br>
+              Friday, 3 January, 2025 - Saturday, 4 January, 2025. </p>
 
             <p><strong>The purpose of this boot camp is to:</strong></p>
             <ul>
