--- a/index.html
+++ b/index.html
@@ -101,6 +101,57 @@
             line-height: 1.6;
         }
 
+        /* Button styling */
+        .button {
+            display: inline-block;
+            background-color: #ffcc00;
+            color: #004d99;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #ff9900;
+        }
+
+        /* Cover styling */
+        .cover {
+            position: relative;
+            width: 100%;
+            height: auto;
+            overflow: hidden;
+        }
+
+        .cover img.cover-image {
+            width: 100%;
+            height: auto;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
+
+        .cover-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+            color: white;
+            font-size: 2rem;
+            text-align: center;
+            font-weight: bold;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .container {
@@ -111,6 +162,11 @@
                 border-bottom: 1px solid #ddd;
                 border-right: none;
             }
+        }
+
+        /* Centering elements */
+        .center {
+            text-align: center;
         }
     </style>
 </head>
@@ -130,14 +186,11 @@
             <!-- You can add more boot camp links here -->
         </div>
 
-
-
- <!-- Main Content Section -->
+        <!-- Main Content Section -->
         <div class="main-content">
             <h1 id="bootcamp1"><i class="fa fa-info-circle"></i> Winter 2025 Boot Camp</h1>
             <p><strong>Friday, January 3, 2025 - Saturday, January 4, 2025</strong></p>
 
-             
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
                     <i class="fa fa-pencil"></i> Apply Here
@@ -154,7 +207,7 @@
             </div>
             <br>
             <p>Women in Technology Java Programming Boot Camp will be held in-person from:<br>
-              Friday, 3 January, 2025 - Saturday, 4 January, 2025. </p>
+                Friday, 3 January, 2025 - Saturday, 4 January, 2025. </p>
 
             <p><strong>The purpose of this boot camp is to:</strong></p>
             <ul>
@@ -269,9 +322,6 @@
 
         </div>
     </div>
-
-
-        
 
 </body>
 </html>
