--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
 
     <!-- Header Section with GGC Logo and Title -->
     <div class="header">
-        <img src="ggc-logo.png" alt="GGC Logo"> <!-- Replace with the correct path or URL of the GGC logo -->
+        <img src="SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo" style="width: 75px; height: auto;"> <!-- ggc logo -->
         <h1>Winter 2025 Boot Camp</h1>
     </div>
+
 
     <div class="container">
         <!-- Table of Contents Section -->
