--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table of Contents and Main Page</title>
+    <title>Winter 2025 Boot Camp</title>
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -24,19 +24,31 @@
         .header {
             display: flex;
             align-items: center;
+            justify-content: center; /* Center the content horizontally */
             padding: 20px;
-            background-color: #004d99;
-            color: white;
+            background-color: white; /* Change background to white */
+            color: #004d99;
+            border-bottom: 1px solid #ddd;
+            position: relative; /* Allow for absolute positioning */
         }
 
         .header img {
-            width: 100px; /* Adjust logo size */
+            position: absolute;
+            left: 20px; /* Place logo on the left */
+            top: 50%;
+            transform: translateY(-50%);
+            width: 75px; /* Smaller logo */
             height: auto;
-            margin-right: 20px; /* Add space between logo and title */
         }
 
         .header h1 {
             font-size: 2rem;
+            text-align: center;
+        }
+
+        .header .date {
+            font-size: 1rem;
+            margin-top: 10px;
         }
 
         /* CSS Grid Layout for the main container */
@@ -152,6 +164,32 @@
             font-weight: bold;
         }
 
+        /* Table styling */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #004d99;
+            color: white;
+            padding: 12px;
+        }
+
+        td {
+            padding: 12px;
+            text-align: left;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .container {
@@ -172,10 +210,13 @@
 </head>
 <body>
 
-    <!-- Header Section with GGC Logo and Title -->
+    <!-- Header Section with GGC Logo, Title, and Date -->
     <div class="header">
-        <img src="ggc-logo.png" alt="GGC Logo"> <!-- Replace with the correct path or URL of the GGC logo -->
-        <h1>Winter 2025 Boot Camp</h1>
+        <img src="SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> <!-- Replace with actual logo path -->
+        <div>
+            <h1>Winter 2025 Boot Camp</h1>
+            <div class="date">Friday, January 3, 2025 - Saturday, January 4, 2025</div>
+        </div>
     </div>
 
     <div class="container">
@@ -183,7 +224,6 @@
         <div class="toc">
             <h2><i class="fa fa-list-ul"></i> Table of Contents</h2>
             <a href="#bootcamp1"><i class="fa fa-calendar"></i> Winter 2025 Boot Camp </a>
-            <!-- You can add more boot camp links here -->
         </div>
 
         <!-- Main Content Section -->
@@ -197,6 +237,7 @@
                 </a>
             </div>
 
+            <!-- Cover image and text -->
             <div class="cover">
                 <div class="overlay"></div>
                 <img src="cover3.png" alt="Cover Image" class="cover-image">
@@ -206,8 +247,9 @@
                 </div>
             </div>
             <br>
+
             <p>Women in Technology Java Programming Boot Camp will be held in-person from:<br>
-                Friday, 3 January, 2025 - Saturday, 4 January, 2025. </p>
+              Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
 
             <p><strong>The purpose of this boot camp is to:</strong></p>
             <ul>
@@ -221,12 +263,8 @@
                 <li>Provide professional development opportunities such as guest speakers and off-campus field trips</li>
             </ul>
 
-            <div class="center">
-                <p>The time will be used for programming labs, Tech Talks, peer mentoring sessions, and plenty of breaks. Participants will work on a project and can expect assistance from instructors and student mentors.</p>
-                <p>Click <a href="https://drive.google.com/file/d/1qlDeXEId2BJFrURo6Pa-j5GBZBGyMZUm/view" target="_blank"><b>here</b></a> to listen to what our boot camp alumni have to say about the boot camp.</p>
-                <strong><span style="color:#ff0000">Tentative</span> Schedule of WIT WINTER Boot Camp 2025</strong>
-            </div>
-
+            <!-- Schedule table -->
+            <h2 class="center">Tentative Schedule of WIT Winter Boot Camp 2025</h2>
             <table>
                 <thead>
                     <tr>
@@ -238,73 +276,73 @@
                 <tbody>
                     <tr>
                         <td>Friday, January 3, 2025</td>
-                        <td>8:30 - 9 a.m.</td>
+                        <td>8:30 - 9:00 AM</td>
                         <td>Breakfast (TBA)</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>9 - 9:30 am</td>
+                        <td>9:00 - 9:30 AM</td>
                         <td>Pre-Test (TBA)</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>9:30 - 11:30 am</td>
+                        <td>9:30 - 11:30 AM</td>
                         <td>Programming 1 (TBA) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>11:45 am - 12:15 pm</td>
+                        <td>11:45 AM - 12:15 PM</td>
                         <td>Guest Speaker (Keynote) (TBA)</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>12:15 - 1:15 pm</td>
+                        <td>12:15 - 1:15 PM</td>
                         <td>Lunch</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>1:30 - 4:00 pm</td>
+                        <td>1:30 - 4:00 PM</td>
                         <td>Programming 2 (TBA) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>4:15-5:00 pm</td>
+                        <td>4:15 - 5:00 PM</td>
                         <td>Special Topic - Mini Session (TBA)</td>
                     </tr>
                     <tr>
                         <td>Saturday, January 4, 2025</td>
-                        <td>8:30 - 9 a.m.</td>
+                        <td>8:30 - 9:00 AM</td>
                         <td>Breakfast (TBA)</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>9 - 11:30 am</td>
+                        <td>9:00 - 11:30 AM</td>
                         <td>Programming 3 (TBA) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>11:35 am - 1:00 pm</td>
+                        <td>11:35 AM - 1:00 PM</td>
                         <td>Guest Speakers and Lunch</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>1:15 - 3:30 pm</td>
+                        <td>1:15 - 3:30 PM</td>
                         <td>Programming 4 (TBA) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>3:30 - 4:15 pm</td>
+                        <td>3:30 - 4:15 PM</td>
                         <td>Post-Test and Post Survey (TBA)</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>4:30 - 5:00 pm</td>
+                        <td>4:30 - 5:00 PM</td>
                         <td>Closing Session with Certificate Presentation</td>
                     </tr>
                 </tbody>
             </table>
 
-            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. Ready to apply?</p>
+            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program.</p>
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
