--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
         .center {
             text-align: center;
         }
+
+        .small-logo {
+    width: 100px; /* Adjust this value to make the logo smaller */
+    height: auto;
+}
+
     </style>
 </head>
 <body>
