--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter 2025 Boot Camp</title>
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  -->
     <style>
         /* Reset */
         * {
@@ -20,7 +20,7 @@
             color: #333;
         }
 
-        /* Header styling for GGC logo and title */
+        /* Header*/
         .header {
             display: flex;
             align-items: center;
@@ -51,7 +51,7 @@
             margin-top: 10px;
         }
 
-        /* CSS Grid Layout for the main container */
+        /* main container */
         .container {
             display: grid;
             grid-template-columns: 250px 1fr; /* Adjusted TOC width */
@@ -208,7 +208,7 @@
         }
 
         .small-logo {
-    width: 100px; /* Adjust this value to make the logo smaller */
+    width: 100px; /* logo smaller */
     height: auto;
 }
 
@@ -218,7 +218,7 @@
 
     <!-- Header Section with GGC Logo, Title, and Date -->
     <div class="header">
-        <img src="SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> <!-- Replace with actual logo path -->
+        <img src="SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> 
         <div>
             <h1>Winter 2025 Boot Camp</h1>
             <div class="date">Friday, January 3, 2025 - Saturday, January 4, 2025</div>
