Update and rename bootcamp.html to bc/bootcamp.html

--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -217,7 +217,7 @@
 
     <!-- Header Section with GGC Logo, Title, and Date -->
     <div class="header">
-        <img src="SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> 
+        <img src="/bc/images/SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> 
         <div>
             <h1>Winter 2025 Boot Camp</h1>
             <div class="date">Friday, January 3, 2025 - Saturday, January 4, 2025</div>
@@ -244,7 +244,7 @@
             <!-- Cover image and text -->
             <div class="cover">
                 <div class="overlay"></div>
-                <img src="cover3.png" alt="Cover Image" class="cover-image">
+                <img src="/bc/images/cover3.png" alt="Cover Image" class="cover-image">
                 <div class="cover-text">
                     <p><strong>EMPOWERING WOMEN</strong></p>
                     <p><strong>IN TECHNOLOGY</strong></p>
