--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -244,7 +244,7 @@
             <!-- Cover image and text -->
             <div class="cover">
                 <div class="overlay"></div>
-                 <img src="bc/images/cover3.png" alt="Cover Image" class="cover-image" />
+                 <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover3.png?raw=true" alt="Cover Image" class="cover-image" />
                 <div class="cover-text">
                     <p><strong>EMPOWERING WOMEN</strong></p>
                     <p><strong>IN TECHNOLOGY</strong></p>
