--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -23,17 +23,17 @@
         .header {
             display: flex;
             align-items: center;
-            justify-content: center; /* Center the content horizontally */
+            justify-content: center;  
             padding: 20px;
-            background-color: white; /* Change background to white */
+            background-color: white;  
             color: #004d99;
             border-bottom: 1px solid #ddd;
-            position: relative; /* Allow for absolute positioning */
+            position: relative;  
         }
 
         .header img {
             position: absolute;
-            left: 20px; /* Place logo on the left */
+            left: 20px;  
             top: 50%;
             transform: translateY(-50%);
             width: 75px; /* Smaller logo */
@@ -53,8 +53,8 @@
         /* main container */
         .container {
             display: grid;
-            grid-template-columns: 250px 1fr; /* Adjusted TOC width */
-            height: 100vh; /* Full height of the viewport */
+            grid-template-columns: 250px 1fr;  
+            height: 100vh;  
             background-color: #fff;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
@@ -215,7 +215,7 @@
 </head>
 <body>
 
-    <!-- Header Section with GGC Logo, Title, and Date -->
+    <!-- Header   -->
     <div class="header">
         <img src="/bc/images/SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> 
         <div>
@@ -225,7 +225,7 @@
     </div>
 
     <div class="container">
-        <!-- Table of Contents Section -->
+        <!-- Table of Contents   -->
         <div class="toc">
             <h2><i class="fa fa-list-ul"></i> Table of Contents</h2>
             <a href="#bootcamp1"><i class="fa fa-calendar"></i> Winter 2025 Boot Camp </a>
@@ -241,7 +241,7 @@
                 </a>
             </div>
 
-            <!-- Cover image and text -->
+            <!-- Cover   -->
             <div class="cover">
                 <div class="overlay"></div>
                  <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover3.png?raw=true" alt="Cover Image" class="cover-image" />
