--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -281,22 +281,22 @@
                     <tr>
                         <td>Friday, January 3, 2025</td>
                         <td>8:30 - 9:00 AM</td>
-                        <td>Breakfast (TBA)</td>
+                        <td>Breakfast (A1940)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>9:00 - 9:30 AM</td>
-                        <td>Pre-Test (TBA)</td>
+                        <td>Pre-Test (A1095)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>9:30 - 11:30 AM</td>
-                        <td>Programming 1 (TBA) - Dr. Sebastien Siva</td>
+                        <td>Programming 1 (A1095) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>11:45 AM - 12:15 PM</td>
-                        <td>Guest Speaker (Keynote) (TBA)</td>
+                        <td>Guest Speaker (Keynote) (A1940)</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -306,7 +306,7 @@
                     <tr>
                         <td></td>
                         <td>1:30 - 4:00 PM</td>
-                        <td>Programming 2 (TBA) - Dr. Sebastien Siva</td>
+                        <td>Programming 2 (A1940) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -316,12 +316,12 @@
                     <tr>
                         <td>Saturday, January 4, 2025</td>
                         <td>8:30 - 9:00 AM</td>
-                        <td>Breakfast (TBA)</td>
+                        <td>Breakfast (A1095)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>9:00 - 11:30 AM</td>
-                        <td>Programming 3 (TBA) - Dr. Sebastien Siva</td>
+                        <td>Programming 3 (A1940) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -331,17 +331,17 @@
                     <tr>
                         <td></td>
                         <td>1:15 - 3:30 PM</td>
-                        <td>Programming 4 (TBA) - Dr. Sebastien Siva</td>
+                        <td>Programming 4 (A1940) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>3:30 - 4:15 PM</td>
-                        <td>Post-Test and Post Survey (TBA)</td>
+                        <td>Post-Test and Post Survey (A1940)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>4:30 - 5:00 PM</td>
-                        <td>Closing Session with Certificate Presentation</td>
+                        <td>Closing Session with Certificate Presentation (A1095)</td>
                     </tr>
                 </tbody>
             </table>
