--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -311,7 +311,7 @@
                     <tr>
                         <td></td>
                         <td>4:15 - 5:00 PM</td>
-                        <td>Special Topic - Mini Session (TBA)</td>
+                        <td>Special Topic - Mini Session (A1940)</td>
                     </tr>
                     <tr>
                         <td>Saturday, January 4, 2025</td>
