--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -286,12 +286,12 @@
                     <tr>
                         <td></td>
                         <td>9:00 - 9:30 AM</td>
-                        <td>Pre-Test (A1095)</td>
+                        <td>Pre-Test (A1910/A1930)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>9:30 - 11:30 AM</td>
-                        <td>Programming 1 (A1095) - Dr. Sebastien Siva</td>
+                        <td>Programming 1 (A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -316,12 +316,12 @@
                     <tr>
                         <td>Saturday, January 4, 2025</td>
                         <td>8:30 - 9:00 AM</td>
-                        <td>Breakfast (A1095)</td>
+                        <td>Breakfast (A1940)</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>9:00 - 11:30 AM</td>
-                        <td>Programming 3 (A1940) - Dr. Sebastien Siva</td>
+                        <td>Programming 3 (A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -331,7 +331,7 @@
                     <tr>
                         <td></td>
                         <td>1:15 - 3:30 PM</td>
-                        <td>Programming 4 (A1940) - Dr. Sebastien Siva</td>
+                        <td>Programming 4 (A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -341,7 +341,7 @@
                     <tr>
                         <td></td>
                         <td>4:30 - 5:00 PM</td>
-                        <td>Closing Session with Certificate Presentation (A1095)</td>
+                        <td>Closing Session with Certificate Presentation (A1940)</td>
                     </tr>
                 </tbody>
             </table>
