--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -346,7 +346,7 @@
                 </tbody>
             </table>
 
-            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program.</p>
+            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. We may offer a fee waiver for non-GGC students with a GPA of 3.3 or higher. Please note that eligibility for this waiver will be reviewed on a case-by-case basis and is subject to available resources. </p>
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
