--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -346,9 +346,10 @@
                 </tbody>
             </table>
 
-            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. We may offer a fee waiver for non-GGC students with a GPA of 3.3 or higher. Please note that eligibility for this waiver will be reviewed on a case-by-case basis and is subject to available resources. The Women in Technology (WIT) Java Programming Boot Camp is designed to address the significant underrepresentation of women in the field of technology. This focus aligns with the purpose of the grant funding the program, which is to provide support and opportunities for women pursuing careers in IT.
-
-However, in compliance with Title IX and Georgia Gwinnett College’s commitment to inclusivity, participation in the boot camp is open to all students, regardless of gender. We encourage anyone interested in enhancing their Java programming skills to apply. No applicant will be excluded based on gender or any other protected category under federal, state, or local law.</p>
+            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. We may offer a fee waiver for non-GGC students with a GPA of 3.3 or higher. Please note that eligibility for this waiver will be reviewed on a case-by-case basis and is subject to available resources.</p> 
+            <br>
+            <p>The Women in Technology (WIT) Java Programming Boot Camp is designed to address the significant underrepresentation of women in the field of technology. This focus aligns with the purpose of the grant funding the program, which is to provide support and opportunities for women pursuing careers in IT.</p>
+             <p>However, in compliance with Title IX and Georgia Gwinnett College’s commitment to inclusivity, participation in the boot camp is open to all students, regardless of gender. We encourage anyone interested in enhancing their Java programming skills to apply. No applicant will be excluded based on gender or any other protected category under federal, state, or local law.</p>
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
