--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -349,7 +349,7 @@
             <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. We may offer a fee waiver for non-GGC students with a GPA of 3.3 or higher. Please note that eligibility for this waiver will be reviewed on a case-by-case basis and is subject to available resources.</p> 
             <br>
             <p>The Women in Technology (WIT) Java Programming Boot Camp is designed to address the significant underrepresentation of women in the field of technology. This focus aligns with the purpose of the grant funding the program, which is to provide support and opportunities for women pursuing careers in IT.</p>
-             <p>Participation in the boot camp is open to all students.We encourage anyone interested in enhancing their programming skills to apply.</p>
+             <p>However, participation in the boot camp is open to all students.We encourage anyone interested in enhancing their programming skills to apply.</p>
  
 
             <div class="center">
